Fixed bug #29221 (Segfault using DOM ownerDocument in a PHP object)